--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/touch-0.2.14.min.js"></script>
     <script src="js/module.directive.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
