--- a/www/js/directive.org.html
+++ b/www/js/directive.org.html
@@ -40,22 +40,22 @@
 </div>
 
 <div class="clear footer green-cross color-menu-type" style="    margin-top: 0.5em;">
-    <div class="twrapper" style="padding:0"><div class="type indicator clear">
+    <div class="twrapper" style="padding:0;margin-right: 1em;"><div class="type indicator clear">
         <div class="value no-acc">&nbsp;</div>
         <div class="name">出勤</div>
     </div></div>
 
-    <div class="twrapper" style="padding:0"><div class="type indicator clear">
+    <div class="twrapper" style="padding:0;margin-right: 1em;"><div class="type indicator clear">
         <div class="value danger">&nbsp;</div>
         <div class="name">培训</div>
     </div></div>
 
-    <div class="twrapper" style="padding:0"><div class="type indicator clear">
+    <div class="twrapper" style="padding:0;margin-right: 1em;"><div class="type indicator clear">
         <div class="value damage">&nbsp;</div>
         <div class="name">借调</div>
     </div></div>
 
-    <div class="twrapper" style="padding:0"><div class="type indicator clear">
+    <div class="twrapper" style="padding:0;margin-right: 1em;"><div class="type indicator clear">
         <div class="value supplier">&nbsp;</div>
         <div class="name">缺勤</div>
     </div></div>
