--- a/www/index.html
+++ b/www/index.html
@@ -26,11 +26,11 @@
     <!-- your app's js -->
     <script src="js/module.d3.js"></script>
     <script src="js/module.directive.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body>
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
