登录权限页面

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <!-- your app's js -->
     <script src="js/module.d3.js"></script>
     <script src="js/module.directive.js"></script>
+    <script src="js/directive.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
