--- a/www/js/index.html
+++ b/www/js/index.html
@@ -18,7 +18,7 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="boundle.js"></script>
+    <script src="js/boundle.js"></script>
   </head>
   <body ng-app="starter">
     <!--
