--- a/www/js/pages/sfm/folders.html
+++ b/www/js/pages/sfm/folders.html
@@ -1,19 +1,7 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
 
   <ion-header-bar align-title="center">
-      <div></div>
-      <div class="title anji-theme" >
-        <div class="title-wp" style="background-image: url(img/LOG9.jpg);">
-          <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-          <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
-          <div>
-            <div class="bold-title single-line">
-              <span class="oneLineTitle">选择图片目录</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div></div>
+      <single-title title="选择图片目录"></single-title>
   </ion-header-bar>
 
     <ion-content style="padding: .5em;">
