--- a/www/js/pages/sfm/garden.html
+++ b/www/js/pages/sfm/garden.html
@@ -4,8 +4,8 @@
       <div></div>
       <div class="title anji-theme" >
         <div class="title-wp" style="background-image: url(img/LOG9.jpg);">
-          <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-          <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
+          <div class=" logo-left"><img class="fl" src="../../../img/dazhong.svg"/></div>
+          <div class="logo-right-wp"><img src="../../../img/LOG9.jpg"/></div>
           <div>
             <div class="bold-title single-line">
                 <span class="pageTitle">
