--- a/www/js/pages/sfm/settings.html
+++ b/www/js/pages/sfm/settings.html
@@ -6,20 +6,7 @@
 -->
 <ion-view on-double-click="goHome()" hide-nav-bar="true" hide-back-button="true">
     <ion-header-bar align-title="center">
-        <div></div>
-        <div class="title anji-theme" >
-            <div class="title-wp" style="background-image: url(img/LOG9.jpg);">
-                <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-                <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
-                <div>
-                    <div class="bold-title single-line">
-                        <span class="oneLineTitle">设置</span>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <div></div>
+        <single-title title="设置"></single-title>
     </ion-header-bar>
     <ion-content class="padding" style="margin: 0 0.5em; border-radius: 0.5em;">
         <div style="color: #FFF;">
