--- a/www/js/pages/sfm/view-board.html
+++ b/www/js/pages/sfm/view-board.html
@@ -3,8 +3,8 @@
 	  	<div></div>
 		<div class="title anji-theme"  style="margin-top: 0;">
 			<div class="title-wp" style="background-image: url(img/LOG9.jpg);">
-				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-				<div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
+				<div class=" logo-left"><img class="fl" src="../../../img/dazhong.svg"/></div>
+				<div class="logo-right-wp"><img src="../../../img/LOG9.jpg"/></div>
 				<div>
 					<div class="bold-title single-line">
 			  			<span class="oneLineTitle" ng-bind="criteria.kuqu?criteria.kuqu.whse_name+'目视板':'目视板'"></span>
