--- a/www/js/pages/sfm/flow-view-wall.html
+++ b/www/js/pages/sfm/flow-view-wall.html
@@ -21,7 +21,7 @@
 	</ion-header-bar>
     <ion-content class="bgFF" style="background: #FFF;bottom: 4em;">
 	    <div class="kqhz gwrx content-wrapper">
-	    <span class="anji-theme" style="font-size:0.9em"  </span>
+	    <!-- <span class="anji-theme" style="font-size:0.9em"></span> -->
 		<table>
 			<thead>
 			<tr>
