--- a/www/js/pages/ad-board/member.html
+++ b/www/js/pages/ad-board/member.html
@@ -5,40 +5,50 @@
     <ion-content class="bgFF" style="background: #FFF;bottom: 4em;" on-double-tap="goHome('kqhz')">
         <div class="kqhz gwrx xiajia member content-wrapper">
             <p ng-if="noPermission" ng-bind="noPermission" style="font-size: 1.5em"></p>
-            <table ng-hide="noPermission">
-                <thead>
-                    <tr>
-                        <!-- <th>选择(可以多选)</th> -->
-                        <th>序号</th>
-                        <th>零件号</th>
-                        <th>班组</th>
-                        <th>初始用户</th>
-                        <th>当前用户</th>
-                        <th>修改时间</th>
-                    </tr>
-                </thead>
-                <tbody ng-show="errorMsg" class="errorMsg">
-                    <tr>
-                        <td colspan="6">
-                            <span ng-bind="errorMsg" style="display: inline;">加载中</span>
-                        </td>
-                    </tr>
-                </tbody>
-                <tbody ng-repeat="r in itemMembers">
-                    <tr>
-                        <!-- <td  class="check"><label><span><span class="glyphicon glyphicon-ok"></span></span></label></td> -->
-                        <td ng-bind="$index+1"></td>
-                        <td ng-bind="r.itemCode"></td>
-                        <td ng-bind="r.groupName"></td>
-                        <td ng-bind="r.firstUser"></td>
-                        <td class="operation">
-                            <span ng-bind="r.lastUser"></span>
-                            <span ng-bind="r.txt" ng-click="modifyMember(r)">&nbsp;</span>
-                        </td>
-                        <td ng-bind="r.lastModify"></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div ng-hide="noPermission">
+                <div class="list" style="width: 20em;">
+                    <label class="item item-input item-select">
+                        <div class="input-label">
+                            人员列表
+                        </div>
+                        <select ng-model="selectedMemeber" ng-options="m.name for m in membersObj" ng-change="loadItems(selectedMemeber)"></select>
+                    </label>
+                </div>
+                <table ng-hide="noPermission">
+                    <thead>
+                        <tr>
+                            <!-- <th>选择(可以多选)</th> -->
+                            <th>序号</th>
+                            <th>零件号</th>
+                            <th>班组</th>
+                            <th>初始用户</th>
+                            <th>当前用户</th>
+                            <th>修改时间</th>
+                        </tr>
+                    </thead>
+                    <tbody ng-show="loadingItems || errorMsg" class="errorMsg">
+                        <tr>
+                            <td colspan="6">
+                                <span ng-bind="errorMsg?errorMsg:loadingItems" style="display: inline;">加载中</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tbody ng-repeat="r in itemMembers">
+                        <tr>
+                            <!-- <td  class="check"><label><span><span class="glyphicon glyphicon-ok"></span></span></label></td> -->
+                            <td ng-bind="$index+1"></td>
+                            <td ng-bind="r.itemCode"></td>
+                            <td ng-bind="r.groupName"></td>
+                            <td ng-bind="r.firstUser"></td>
+                            <td class="operation">
+                                <span ng-bind="r.lastUser"></span>
+                                <span ng-bind="r.txt" ng-click="modifyMember(r)">&nbsp;</span>
+                            </td>
+                            <td ng-bind="r.lastModify"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </ion-content>
     <ion-footer-bar>
