--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <!-- your app's js -->
     <script src="boundle.js"></script>
   </head>
-  <body>
+  <body ng-app="starter">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
