建议上架　文本修改

--- a/www/js/pages/ad-board/Shangjia.html
+++ b/www/js/pages/ad-board/Shangjia.html
@@ -9,7 +9,7 @@
             <tr>
                 <th>序号</th>
                 <th>零件号</th>
-                <th>上架库位</th>
+                <th>建议上架库位</th>
                 <th>箱号</th>
                 <th>最迟上架时间</th>
                 <th>取货库位</th>
